kube/deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: multipay
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multipay-utility-payments-api
  namespace: multipay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multipay-utility-payments-api
  template:
    metadata:
      namespace: multipay
      labels:
        app: multipay-utility-payments-api
        version: v1
    spec:
      containers:
        - name: multipay-utility-payments-api
          image: ${IMAGE}
          ports:
            - containerPort: 80
          imagePullPolicy: Always
      imagePullSecrets:
        - name: container-reg-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: multipay-utility-payments-api-svc
  namespace: multipay
  labels:
    app: multipay-utility-payments-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: multipay-utility-payments-api
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: multipay-utility-payments-api-se
  namespace: multipay
spec:
  hosts:
    - smtp.sendgrid.net
  location: MESH_EXTERNAL
  ports:
    - number: 587
      name: tcp-smtp
      protocol: TCP
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: multipay-utility-payments-api-se-db
  namespace: multipay
spec:
  hosts:
    - "*.database.azure.com"
  location: MESH_EXTERNAL
  ports:
    - number: 5432
      name: tcp-db
      protocol: TCP
